2004-08-08  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object): If __RTLD_CALLMAP flag is set,
	reset loader before the actual loading.
	* elf/dl-open.c (dl_open_worker): If file name contains no path
	element determine map of caller.  Pass caller map in this case to
	_dl_map_object.  Set __RTLD_CALLMAP in mode.
	* include/dlfcn.h (__RTLD_CALLMAP): Define.  [BZ #116]
	Patch by Greg Wolodkin <greg@mathworks.com>.

	* misc/syslog.c (openlog_internal): Always try both UDP and TCP.
	[BZ #108]  Patch mainly by Bjorn Andersson <bjorn@iki.fi>.

	* configure.in: Also recognize i786. [BZ #106]
	Patch by <pluto@pld-linux.org>.

	* resolv/res_query.c (__libc_res_nsearch): Correctly test whether
	name contains any dots. [BZ #95]

	* resolv/res_send.c: Compiling with DEBUG defined works again.
	* resolv/gethnamaddr.c (dprintf): Renamed to Dprintf.  Adjust all
	callers.

	* resolv/tst-leaks.c (TIMEOUT): Define so that if no server is
	available the process is not killed. [BZ #41]

	* intl/tst-gettext.c (main): Improve some messages. [BZ #33]

	* time/strptime_l.c (__strptime_internal): Fix handling of %Ey.
	[BZ #28]

	* po/sv.po: Update from translation team.

2004-08-07  Ulrich Drepper  <drepper@redhat.com>

	* inet/netinet/in.h: Add more const to the setipv4soucefilter,
	getsourcefilter, and setsourcefilter parameter list.
	* sysdeps/generic/setipv4sourcefilter.c: Likewise.
	* sysdeps/generic/getsourcefilter.c: Likewise.
	* sysdeps/generic/setsourcefilter.c: Likewise.
	* sysdeps/unix/sysv/linux/setipv4sourcefilter.c: Likewise.
	* sysdeps/unix/sysv/linux/getsourcefilter.c: Likewise.
	* sysdeps/unix/sysv/linux/setsourcefilter.c: Likewise.

	* po/tr.po: Update from translation team.

2004-08-06  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/jisx0213.h (jisx0213_added_in_2004_p): Fix typo.
	Reported by Paolo Bonzini.

2004-08-06  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ia64/dl-machine.h (elf_machine_fixup_plt): Add
	always_inline.